[gd_scene load_steps=10 format=2]

[ext_resource path="res://enemies/LandShooter.gd" type="Script" id=1]
[ext_resource path="res://enemies/AI/DynamicCollisionShape.gd" type="Script" id=2]
[ext_resource path="res://_src/ph_land_chaser.png" type="Texture" id=3]
[ext_resource path="res://enemies/AI/AttackArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://enemies/AI/AwarenessArea.tscn" type="PackedScene" id=5]
[ext_resource path="res://enemies/AI/FocusArea.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/HealthBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://player/AttackCooldown.gd" type="Script" id=8]

[sub_resource type="CircleShape2D" id=1]

[node name="LandShooter" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="DynamicCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="AttackArea" parent="." instance=ExtResource( 4 )]

[node name="AwarenessArea" parent="." instance=ExtResource( 5 )]

[node name="FocusArea" parent="." instance=ExtResource( 6 )]

[node name="HealthBar" parent="." instance=ExtResource( 7 )]

[node name="AttackCooldown" type="Timer" parent="."]
script = ExtResource( 8 )
[connection signal="health_changed" from="." to="HealthBar" method="_on_health_changed"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_entered" from="AwarenessArea" to="." method="_on_AwarenessArea_body_entered"]
[connection signal="body_exited" from="FocusArea" to="." method="_on_FocusArea_body_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
